--- a/03 PRESIDENTIELLES 2022/test_recup_data.ipynb
+++ b/03 PRESIDENTIELLES 2022/test_recup_data.ipynb
@@ -19,11 +19,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = 'dFKN7KyKuT5jcoyCyGfFnljXq'\n",
-    "consumer_secret_key = 'hbY6cMVBuvfRefBNx0ogUfkZZlJdq8WKo7duluJsiegchVs5P3'\n",
+    "consumer_key = ''\n",
+    "consumer_secret_key = ''\n",
     "\n",
-    "access_token = '1887621606-JTJDzm55NclzhbT2e5btZsr6kl4RldeigTehMBs'\n",
-    "access_secret_token = 'ksHHQB2GtPSt0NlpfDCfhBTiYTUejHVp2dokpwX7zTl0O'"
+    "access_token = ''\n",
+    "access_secret_token = ''"
    ]
   },
   {
